Update SecurityConfig: use `List.of` and add PATCH to allowed CORS methods